# 3DMotionModeller

./: .coverage  .flake8  bodies.py  hydrofoils.py  noxfile.py  pyproject.toml
dynamics3d/: __init__.py  inertialvectors.py  plotting.py
tests/: test_inertialvectors.py  test_rigidbodies.py
