[tool.poetry]
name = "3dmotionmodeller"
version = "0.1.0"
description = "A Freebody Numerical Physics Solver"
authors = ["jvb-a <joao.victor@kunumi.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
nox = "^2022.1.7"
numpy-quaternion = "^2022.4.2"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
